examples/test/testpolicy4409.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4409
  namespace: namespace221
spec:
  podSelector:
    matchLabels:
      key31: value37
      key17: value9
      key14: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value49
      podSelector:
        matchLabels:
          key49: value5
          key19: value24
          key11: value15
